@@ -227,3 +227,14 @@ RCPP_FUNCTION_1( double, test_gsl_vector_input, RcppGSL::vector<double> vec){
 	return res ;
 }
 
+RCPP_FUNCTION_1( double, test_gsl_matrix_input, RcppGSL::matrix<double> mat){
+	int nr = mat->size1 ;
+	
+	double res = 0.0 ;
+	for( int i=0; i<nr; i++){
+		res += gsl_matrix_get( mat, i, 0 ) ;
+	}
+	mat.free() ;
+	return res ;
+}
+
